--- a/public/portal/sindicatos/configuracion.latte
+++ b/public/portal/sindicatos/configuracion.latte
@@ -2,6 +2,9 @@
 
 {block title}Configuracion del sindicato{/block}
 
+{var $comite = $comite ?? []}
+{var $puestosComite = $puestosComite ?? []}
+
 {block main}
 <div class="d-flex flex-column flex-lg-row justify-content-between align-items-start align-items-lg-center mb-4">
     <div>
